<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/general_header">

        <MultiSelectListPreference
            app:title="@string/days_shown"
            app:entries="@array/days_entry"
            app:entryValues="@array/days_value"
            app:summary=""
            app:dialogTitle="@string/days_shown"
            />

        <SwitchPreference
            app:title="@string/dark_toggle"
            />

        <SwitchPreference
            app:title="@string/topbanner_toggle"
            />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sound_header">

        <CheckBoxPreference
            app:title="@string/volume_setting"
            />

        <SeekBarPreference
            app:title="@string/alert_slider"
            />

        <SeekBarPreference
            app:title="@string/notif_slider"
            />

        <SeekBarPreference
            app:title="@string/general_slider"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notif_header">

        <SwitchPreference
            app:title="@string/push_toggle"
            />
        <SwitchPreference
            app:title="@string/vibrate_toggle"
            />

    </PreferenceCategory>


</PreferenceScreen>